Кнопка выхода -лишний пейджинг

--- a/WebUI/ClientApp/src/app/admin/admin.component.html
+++ b/WebUI/ClientApp/src/app/admin/admin.component.html
@@ -9,6 +9,10 @@
       <li><a [routerLink]="[ 'workgroups' ]" routerLinkActive="active">Рабочие группы</a></li> 
     </ul>
   </nav>
+  <div class="logout">
+    Админ панель
+    <i class="fas fa-sign-out-alt" (click)="logout()"></i>
+  </div>
 </mat-toolbar>
 
 
