--- a/WebUI/ClientApp/src/app/admin/admin.component.sass
+++ b/WebUI/ClientApp/src/app/admin/admin.component.sass
@@ -1,2 +1,19 @@
 .wrapper
     padding: 0px 10px
+
+.logout
+    margin-left: auto
+    color: #F17373
+    font-size: 18px
+    padding: 23px 40px
+    background: rgba(244, 148, 145, 0.05)
+    i
+        display: inline-block
+        margin-left: 60px
+        background: rgba(255, 224, 224, 0.2)
+        padding: 15px
+        border-radius: 99px
+        cursor: pointer
+
+.mat-toolbar-row, .mat-toolbar-single-row
+    padding-right: 0px
