--- a/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
@@ -7,6 +7,11 @@
       <li><a href="" class="active">Клиенты</a></li>     
     </ul>
   </nav>
+
+  <div class="logout">
+    Менеджер
+    <i class="fas fa-sign-out-alt" (click)="logout()"></i>
+  </div>
 </mat-toolbar>
 
 
