Вывод манагеру на главную количество звонков (30 мин)

--- a/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
@@ -4,7 +4,8 @@
   </div>
   <nav>
     <ul>
-      <li><a href="" class="active">Клиенты</a></li>     
+      <li><a routerLink="dashboard" routerLinkActive="active">Главная</a></li>    
+      <li><a routerLink="clients" routerLinkActive="active">Клиенты</a></li>      
     </ul>
   </nav>
 
