--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -127,14 +127,14 @@
 
           <ng-container matColumnDef="MSresults.sum">
             <th mat-header-cell *matHeaderCellDef style="background-color: #f0fdf4">МС</th>
-            <td [style.background]="element.callPlan.escortManagerCalls == element.managerCallsResults.escortTotalContacts ? '#b2fab4' : 'transparent'" mat-cell *matCellDef="let element" (click)="openCallsDates(element)">
+            <td [style.background]="element.callPlan.escortManagerCalls <= element.managerCallsResults.escortTotalContacts ? '#b2fab4' : 'transparent'" mat-cell *matCellDef="let element" (click)="openCallsDates(element)">
               {{element.managerCallsResults.escortTotalContacts}}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="RMresults.sum">
             <th mat-header-cell *matHeaderCellDef style="background-color: #f5fdf0">РМ</th>
-            <td [style.background]="element.callPlan.regionalManagerCalls == element.managerCallsResults.regionalTotalContacts ? '#b2fab4' : 'transparent'" mat-cell *matCellDef="let element" (click)="openCallsDates(element)"> 
+            <td [style.background]="element.callPlan.regionalManagerCalls <= element.managerCallsResults.regionalTotalContacts ? '#b2fab4' : 'transparent'" mat-cell *matCellDef="let element" (click)="openCallsDates(element)"> 
               {{element.managerCallsResults.regionalTotalContacts}}
             </td>
           </ng-container>
