поправил месяцы (15 минут)

--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
@@ -6,7 +6,7 @@
     <h3>Даты и фактическое число звонков</h3>
   </div>
   <div>
-    <small>июнь</small>
+    <small>{{currentMonth}}</small>
   </div> 
   <div>
     <button class="back" (click)="openCallsResult()">Итоги звонков за месяц</button>
