--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-result-dialog/calls-result-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-result-dialog/calls-result-dialog.component.html
@@ -9,7 +9,7 @@
     <h3>Итоги звонков за месяц</h3>
   </div>
   <div>
-    <small>июнь</small>
+    <small>{{currentMonth}}</small>
   </div> 
 </div>
 
