--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -27,6 +27,11 @@
             <th mat-header-cell *matHeaderCellDef>Тип</th>
             <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
           </ng-container>
+
+          <ng-container matColumnDef="legalEntity">
+            <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+            <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+          </ng-container>
         
           <ng-container matColumnDef="numberOfCalls">
             <th mat-header-cell *matHeaderCellDef>Звонки</th>
@@ -142,7 +147,7 @@
           <ng-container matColumnDef="filler">
               <th mat-header-cell *matHeaderCellDef 
                   [style.text-align]="center"
-                  [attr.colspan]="5"
+                  [attr.colspan]="6"
                   style="background-color: #fff">                
               </th>
             </ng-container>
