--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.sass
@@ -32,3 +32,31 @@
         span
             font-size: 22px
             font-weight: normal
+
+
+.manager-effiency
+    table
+        border-collapse: collapse
+        td, th
+            padding: 10px 15px
+            text-align: left
+        td
+            padding-left: 15px !important
+            padding-right: 5px !important
+            border: 1px solid #f7f7f7
+            text-align: center
+            white-space:nowrap
+            overflow:hidden
+            text-overflow:ellipsis
+
+        th 
+            padding-left: 15px !important
+            padding-right: 5px !important
+            background-color: #fcfcfc
+            border-bottom: 1px solid #f7f7f7
+            color: #b9b9b9
+            font-weight: normal
+            text-align: center
+
+.manager-effiency
+    padding-bottom: 160px
