--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -98,10 +98,14 @@ th
 .filter
     margin: 0 20px
     text-align: right
-    input 
+    input, select
         display: inline-block 
         width: 365px
         padding: 10px 20px
         border: 1px solid 
         border-radius: 99px
         border: 1px solid #E9F3FF
+    select
+        width: 245px
+        margin-right: 20px
+
