--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -6,6 +6,10 @@
   <mat-card-content>
 
       <div class="filter clearfix">
+        <select [(ngModel)]="selectedGroup" (change)="selectedGroupChange()">
+          <option [value]="-10">Все клиенты</option>
+          <option *ngFor="let group of getClientsGroups()" [value]="group">{{group | clientGroupPipeTranslate}}</option>
+        </select>
         <input (keyup)="applyFilter($event.target.value)" placeholder="Поиск">
       </div>
         
@@ -31,6 +35,11 @@
             <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
           </ng-container>
         
+          <ng-container matColumnDef="legalEntity">
+            <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+            <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+          </ng-container>
+
           <ng-container matColumnDef="numberOfCalls">
             <th mat-header-cell *matHeaderCellDef>Звонки</th>
             <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
