--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/edit-client-dialog/edit-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/edit-client-dialog/edit-client-dialog.component.html
@@ -30,6 +30,18 @@
         <option [value]="90">Очень крупный</option>
       </select>
   </div>
+
+  <div class="form-group">
+      <label for="">Группа клиента</label>
+      <select placeholder="Тип клиента" [(ngModel)]="data.group" [ngModelOptions]="{standalone: true}">
+          <option [value]="0">Неопределен</option>
+          <option [value]="10">Актуальные</option>
+          <option [value]="20">С редкой отгрузкой</option>
+          <option [value]="30">Новые или востановленные</option>
+          <option [value]="40">Рестораны</option>
+          <option [value]="50">Другие</option>
+        </select>
+    </div>
     
   <div class="form-group">
     <label for="">Переодичность звонков</label>
