--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -27,7 +27,7 @@
 
           <ng-container matColumnDef="phone">
             <th mat-header-cell *matHeaderCellDef>Телефон</th>
-            <td mat-cell *matCellDef="let element">{{element.phone}} </td>
+            <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
           </ng-container>
         
           <ng-container matColumnDef="clientType">
