--- a/WebUI/ClientApp/src/app/admin/clients/dialogs/client-phones/client-phones.component.sass
+++ b/WebUI/ClientApp/src/app/admin/clients/dialogs/client-phones/client-phones.component.sass
@@ -22,17 +22,6 @@
 form
     display: grid
     grid-template-columns: repeat(2, 1fr)
-    button
-        margin-top: 10px
-        display: inline-block
-        width: 100%
-        border-radius: 20px
-        outline: none
-        border: none
-        background-color: #7abfff
-        color: #fff
-        cursor: pointer
-        padding: 10px 15px
 
 ::ng-deep .mat-dialog-container
     position: relative
@@ -43,7 +32,7 @@ form
         margin: 0
         padding: 0
 
-input, select
+input
     box-sizing: border-box
     width: 100%
     display: block
@@ -55,11 +44,23 @@ input, select
     color: #9CB2CD
     cursor: pointer
 
+
 .form-group
+    position: relative
     margin-bottom: 20px
-    padding: 0px 20px
+    padding: 0px 60px 0px 20px
 
-
+.deletePhone
+    position: absolute
+    bottom: 5px
+    right: 20px
+    width: 35px
+    height: 35px
+    border: none
+    border-radius: 100px
+    background: rgba(255, 235, 235, 0.91)
+    color: #E79B9B
+    cursor: pointer
 
 label
     font-size: 13px
@@ -70,3 +71,16 @@ label
 
 ::placeholder
     color: #9CB2CD
+
+.add-phone
+    border-radius: 20px
+    outline: none
+    border: none
+    box-shadow: none
+    background-color: #7abfff
+    color: #fff
+    cursor: pointer
+    padding: 15px 40px
+    margin-bottom: 20px
+.add-entity
+    text-align: center
