--- a/WebUI/ClientApp/src/app/admin/clients/dialogs/edit-client-dialog/edit-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/dialogs/edit-client-dialog/edit-client-dialog.component.html
@@ -9,7 +9,8 @@
   </div>
   <div class="form-group">
     <label for="">Номер телефона</label>
-    <input placeholder="Телефон" [(ngModel)]="data.phone" [ngModelOptions]="{standalone: true}">
+    <input placeholder="Телефон" [(ngModel)]="data.phones[0].phone" [ngModelOptions]="{standalone: true}">
+    <button (click)="openClientPhones()">Еще номера</button>
   </div>      
 
   <div class="form-group">
