--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/create-client-dialog/create-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/create-client-dialog/create-client-dialog.component.html
@@ -9,7 +9,8 @@
   </div>
   <div class="form-group">
     <label for="">Номер телефона</label>
-    <input placeholder="Телефон" formControlName="phone">
+    <input placeholder="Телефон" [(ngModel)]="phones[0].phone" [ngModelOptions]="{standalone: true}">
+    <button (click)="openClientPhones()">Еще номера</button>
   </div>      
 
   <div class="form-group">
