--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/edit-client-dialog/edit-client-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/edit-client-dialog/edit-client-dialog.component.sass
@@ -22,6 +22,17 @@
 form
     display: grid
     grid-template-columns: repeat(2, 1fr)
+    button
+        margin-top: 10px
+        display: inline-block
+        width: 100%
+        border-radius: 20px
+        outline: none
+        border: none
+        background-color: #7abfff
+        color: #fff
+        cursor: pointer
+        padding: 10px 15px
 
 ::ng-deep .mat-dialog-container
     position: relative
