--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -64,7 +64,7 @@
             <th colspan="12">Региональный менеджер</th>
           </tr>
           <tr>
-            <td rowspan="3">{{(getRegionalManagerCallContactsAmount() / contactsStandard * 100).toFixed(1)}}%</td>
+            <td rowspan="3">{{(getRegionalManagerCallContactsAmount() / (contactsStandard + 16) * 100).toFixed(1)}}%</td>
             <td colspan="2">Встречи и командировки развития</td>
             <td>10</td>
             <td></td>
