--- a/WebUI/ClientApp/src/app/admin/clients/dialogs/create-client-dialog/create-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/dialogs/create-client-dialog/create-client-dialog.component.html
@@ -38,7 +38,7 @@
           <option [value]="0">Неопределен</option>
           <option [value]="10">Актуальные</option>
           <option [value]="20">С редкой отгрузкой</option>
-          <option [value]="30">Новые или востановленные</option>
+          <option [value]="30">Новые или реанимируемые</option>
           <option [value]="40">Рестораны</option>
           <option [value]="50">Другие</option>
         </select>
