--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
@@ -42,8 +42,9 @@
       </div>
     </div>
   </div>
-  
-  <table style="margin-bottom: 40px">
+
+  <div style="display:flex">
+    <table style="margin-bottom: 40px">
       <thead>
         <tr>
           <th style="background-color: #F1F8FF" width="50"></th>
@@ -72,7 +73,20 @@
           </td>
         </tr>
       </tbody>
-  </table>
+    </table>
+    <div>
+      <div class="dialog-section">
+        <div class="dialog-section-title1" style="background-color:#D3E8FF">
+          Резюме
+        </div>
+        <div class="dialog-section-body1" style="background: rgba(222, 237, 255, 0.2)">
+          <div class="planned">
+            <textarea matInput placeholder="Введите резюме"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   
  
 </mat-dialog-content>
