--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -3,65 +3,311 @@
     <mat-card-title class="card-title">Клиенты</mat-card-title>
     <button class="addEntity" (click)="openCreateClientForm()">+ Добавить клиента</button>
   </mat-card-header>
-  <mat-card-content>
+  <div class="filter clearfix">
+    <!--<select [(ngModel)]="selectedGroup" (change)="selectedGroupChange()">
+    <option [value]="-10">Все клиенты</option>
+    <option [value]="0">Неопределен</option>
+    <option [value]="10">Актуальные</option>
+    <option [value]="20">С редкой отгрузкой</option>
+    <option [value]="30">Новые или реанимируемые</option>
+    <option [value]="40">Рестораны</option>
+    <option [value]="50">Другие</option>
+  </select>-->
+    <select [(ngModel)]="selectedGroup" (change)="selectedWorkGroupChange()">
+      <option [ngValue]=-10>Все рабочие групы</option>
+      <option *ngFor="let wg of workgroup; let i = index"[ngValue]=i>
+        {{wg.title}}
+      </option>
+    </select>
+    <input id="serch" (keyup)="applyFilter($event.target.value)" placeholder="Поиск">
+  </div>
+  <div [hidden]="hidenDivFull">
+    <mat-card-content style="background-color:#f7f7f7">
+      <!--<mat-paginator [length]="actualLength" [pageSize]="10" [pageSizeOptions]="[10]">
+      </mat-paginator>-->
+      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Актуальные</span>
+      <table mat-table [dataSource]="actual" [trackBy]="getTrackBy">
 
-      <div class="filter clearfix">
-        <select [(ngModel)]="selectedGroup" (change)="selectedGroupChange()">
-          <option [value]="-10">Все клиенты</option>
-          <option [value]="0">Неопределен</option>
-          <option [value]="10">Актуальные</option>
-          <option [value]="20">С редкой отгрузкой</option>
-          <option [value]="30">Новые или реанимируемые</option>
-          <option [value]="40">Рестораны</option>
-          <option [value]="50">Другие</option>
-        </select>
-        <input (keyup)="applyFilter($event.target.value)" placeholder="Поиск">
-      </div>
-        
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Название</th>
+          <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+        </ng-container>
 
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef>Телефон</th>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+        </ng-container>
 
+        <ng-container matColumnDef="clientType">
+          <th mat-header-cell *matHeaderCellDef>Тип</th>
+          <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="legalEntity">
+          <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+          <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfCalls">
+          <th mat-header-cell *matHeaderCellDef>Звонки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfShipments">
+          <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+      </table>
+    </mat-card-content>
+
+    <mat-card-content style="background-color:#f7f7f7">
+      <!--<mat-paginator [length]="recordShipmentLength" [pageSize]="10" [pageSizeOptions]="[10]">
+      </mat-paginator>-->
+      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">С рекордной отгрузкой</span>
+      <table mat-table [dataSource]="recordShipment" [trackBy]="getTrackBy">
+
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Название</th>
+          <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef>Телефон</th>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="clientType">
+          <th mat-header-cell *matHeaderCellDef>Тип</th>
+          <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="legalEntity">
+          <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+          <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfCalls">
+          <th mat-header-cell *matHeaderCellDef>Звонки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfShipments">
+          <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+      </table>
+    </mat-card-content>
+
+    <mat-card-content style="background-color:#f7f7f7">
+      <!--<mat-paginator [length]="restaurantsLength" [pageSize]="10" [pageSizeOptions]="[10]">
+      </mat-paginator>-->
+      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Рестораны</span>
+      <table mat-table [dataSource]="restaurants" [trackBy]="getTrackBy">
+
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Название</th>
+          <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef>Телефон</th>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="clientType">
+          <th mat-header-cell *matHeaderCellDef>Тип</th>
+          <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="legalEntity">
+          <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+          <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfCalls">
+          <th mat-header-cell *matHeaderCellDef>Звонки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfShipments">
+          <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+      </table>
+    </mat-card-content>
+
+    <mat-card-content style="background-color:#f7f7f7">
+      <!--<mat-paginator [length]="newOrResuscitating" [pageSize]="10" [pageSizeOptions]="[10]">
+      </mat-paginator>-->
+      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Новые или реанимируемые</span>
+      <table mat-table [dataSource]="newOrResuscitating" [trackBy]="getTrackBy">
+
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Название</th>
+          <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef>Телефон</th>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="clientType">
+          <th mat-header-cell *matHeaderCellDef>Тип</th>
+          <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="legalEntity">
+          <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+          <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfCalls">
+          <th mat-header-cell *matHeaderCellDef>Звонки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfShipments">
+          <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+      </table>
+    </mat-card-content>
+
+    <mat-card-content style="background-color:#f7f7f7">
+      <!--<mat-paginator [length]="notDeterminedLength" [pageSize]="notDeterminedPageSize" [pageSizeOptions]="[10]">
+      </mat-paginator>-->
+      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Неопределен</span>
+      <table mat-table [dataSource]="notDetermined" [trackBy]="getTrackBy">
+
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Название</th>
+          <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef>Телефон</th>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="clientType">
+          <th mat-header-cell *matHeaderCellDef>Тип</th>
+          <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="legalEntity">
+          <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+          <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfCalls">
+          <th mat-header-cell *matHeaderCellDef>Звонки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfShipments">
+          <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+      </table>
+    </mat-card-content>
+
+    <mat-card-content style="background-color:#f7f7f7">
+      <!--<mat-paginator [length]="notDeterminedLength" [pageSize]="notDeterminedPageSize" [pageSizeOptions]="[10]">
+      </mat-paginator>-->
+      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Другие</span>
+      <table mat-table [dataSource]="other" [trackBy]="getTrackBy">
+
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Название</th>
+          <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef>Телефон</th>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="clientType">
+          <th mat-header-cell *matHeaderCellDef>Тип</th>
+          <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="legalEntity">
+          <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+          <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfCalls">
+          <th mat-header-cell *matHeaderCellDef>Звонки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfShipments">
+          <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+      </table>
+    </mat-card-content>
+  </div>
+
+  <div [hidden]="hidenDivSrrch">
+    <mat-card-content >
       <mat-paginator [pageSize]="50" [pageSizeOptions]="[50, 100, 150]">
       </mat-paginator>
 
       <table mat-table [dataSource]="dataSource" [trackBy]="getTrackBy">
-        
-          <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef >Название</th>
-            <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
-          </ng-container>
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Название</th>
+          <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="phone">
-            <th mat-header-cell *matHeaderCellDef>Телефон</th>
-            <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
-          </ng-container>
-        
-          <ng-container matColumnDef="clientType">
-            <th mat-header-cell *matHeaderCellDef>Тип</th>
-            <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
-          </ng-container>
-        
-          <ng-container matColumnDef="legalEntity">
-            <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
-            <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
-          </ng-container>
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef>Телефон</th>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="numberOfCalls">
-            <th mat-header-cell *matHeaderCellDef>Звонки</th>
-            <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
-          </ng-container>
-        
-          <ng-container matColumnDef="numberOfShipments">
-            <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
-            <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
-          </ng-container>
-        
-          
-        
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+        <ng-container matColumnDef="clientType">
+          <th mat-header-cell *matHeaderCellDef>Тип</th>
+          <td mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
+        </ng-container>
 
-          
-        </table>
-        
-  </mat-card-content>
+        <ng-container matColumnDef="legalEntity">
+          <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
+          <td mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfCalls">
+          <th mat-header-cell *matHeaderCellDef>Звонки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfShipments">
+          <th mat-header-cell *matHeaderCellDef>Отгрузки</th>
+          <td mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+      </table>
+    </mat-card-content>
+  </div>
 </mat-card>
