--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.sass
@@ -91,6 +91,7 @@ th
         border: 1px solid 
         border-radius: 99px
         border: 1px solid #E9F3FF
+        margin-bottom: 10px
     select
         width: 245px
         margin-right: 20px
