--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
@@ -54,10 +54,15 @@ h3
             background-color: #E2F7FF
             color: #89B4C5
 
-.dialog-section   
+.dialog-section
+    min-width: 200px
     .dialog-section-title
         font-size: 18px
         padding: 30px 25px
+    .dialog-section-title1
+        font-size: 18px
+        padding: 23.5px 25px
+        text-align: center
     .dialog-section-body
         padding: 30px 25px
         small
@@ -66,6 +71,19 @@ h3
         textarea
             margin-top: 12px
             min-height: 98px
+            font-size: 14px
+        .planned
+            position: relative
+        .fact
+            position: relative
+    .dialog-section-body1
+        padding: 5px 45px
+        small
+            color: #A3BEBE
+            border-bottom: 1px solid #A3BEBE
+        textarea
+            margin-top: 12px
+            min-height: 75px
             font-size: 14px
         .planned
             position: relative
