--- a/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups-calls/workgroups-calls.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups-calls/workgroups-calls.component.html
@@ -1,3 +1,4 @@
-<app-workgroups-calls-list [workgroupsCalls]="workgroupsCalls$ | async">
+<app-workgroups-calls-list [workgroupsCalls]="workgroupsCalls$ | async"
+                           [workgroups]="workgroups$ | async">
   
 </app-workgroups-calls-list>
