--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/containers/dashboard/dashboard.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/containers/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<app-dashboard-panel [clientContactsAmount]="clientContactsAmountToday$ | async" [clientContacts]="clientContacts$ | async"></app-dashboard-panel>
+<app-dashboard-panel [clientContactsAmount]="clientContactsAmountToday$ | async"
+                     [clientContacts]="clientContacts$ | async"
+                     [Managerid]="managerId$ | async">
+</app-dashboard-panel>
