--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-calls-list/workgroups-calls-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-calls-list/workgroups-calls-list.component.html
@@ -6,10 +6,13 @@
     <table>
       <thead>
         <tr>
-          <th style="max-width: 100px">
-            Название 
+          <th style="max-width: 100px" (click)="sortActionClientToName()">
+            Название
           </th>
-          <th *ngFor="let day of days">
+          <th style="max-width: 2 00px" >
+            Рабочие группы
+          </th>
+          <th *ngFor="let day of days" (click)="sortActionClient(day)">
             {{day}}
           </th>
           <th colspan="2">
@@ -26,6 +29,7 @@
       <tbody>
         <tr *ngFor="let workgroupCalls of workgroupsCalls">
           <td style="max-width: 100px">{{workgroupCalls.clientTitle}}</td>
+          <td style="max-width: 100px">{{workgroupCalls.nameWorkGroup}}</td>
           <td *ngFor="let day of days">
             <div *ngFor="let clientAction of getClientContactType(day, workgroupCalls.clientActions, workgroupCalls.clientId)" class="action-circle" [style.background]="getActionColor(clientAction.contactType)">
             </div>
