--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
@@ -24,31 +24,35 @@
     <ng-container matColumnDef="EMcall">
       <th mat-header-cell *matHeaderCellDef style="text-align: center; background: #EEFEF6;">МС</th>
       <td mat-cell *matCellDef="let row" style="text-align: center">
-          <mat-select *ngIf="row.date == currentDate" [(ngModel)]="row.MScallType">
-            <mat-option [value]="10">Звонок</mat-option>
-            <mat-option [value]="30">WhatsUp</mat-option>
-            <mat-option [value]="20">Письмо</mat-option>
-          </mat-select>  
-          <mat-select *ngIf="row.date != currentDate" [(ngModel)]="row.MScallType" disabled>
-            <mat-option [value]="10">Звонок</mat-option>
-            <mat-option [value]="30">WhatsUp</mat-option>
-            <mat-option [value]="20">Письмо</mat-option>
-          </mat-select>       
+        <mat-select *ngIf="row.date == currentDate" [(ngModel)]="row.MScallType" [style.background]="chngeColor(row.MScallType)">
+          <mat-option [value]="40" style="background-color:rgba(76, 255, 0, 0.17)">Звонок - развитие подтверждён</mat-option>
+          <mat-option [value]="10" style="background-color:rgba(255, 0, 0, 0.29)">Звонок - развитие не подтверждён</mat-option>
+          <mat-option [value]="30" (click)="selectEl(row)">WhatsUp</mat-option>
+          <mat-option [value]="20" (click)="selectEl(row)">Письмо</mat-option>
+        </mat-select>  
+        <mat-select *ngIf="row.date != currentDate" [(ngModel)]="row.MScallType" disabled [style.background]="chngeColor(row.MScallType)">
+          <mat-option [value]="40">Звонок - развитие подтверждён</mat-option>
+          <mat-option [value]="10">Звонок - развитие не подтверждён</mat-option>
+          <mat-option [value]="30">WhatsUp</mat-option>
+          <mat-option [value]="20">Письмо</mat-option>
+        </mat-select>       
       </td>
     </ng-container>
     <ng-container matColumnDef="RMcall">
       <th mat-header-cell *matHeaderCellDef style="text-align: center; background: #F5FEEE;">РМ</th>
       <td mat-cell *matCellDef="let row; let i = index" style="text-align: center">
-          <mat-select *ngIf="row.date == currentDate" [(ngModel)]="row.RMcallType">
-            <mat-option [value]="10">Звонок</mat-option>
-            <mat-option [value]="30">WhatsUp</mat-option>
-            <mat-option [value]="20">Письмо</mat-option>
-          </mat-select>       
-          <mat-select *ngIf="row.date != currentDate" [(ngModel)]="row.RMcallType" disabled>
-            <mat-option [value]="10">Звонок</mat-option>
-            <mat-option [value]="30">WhatsUp</mat-option>
-            <mat-option [value]="20">Письмо</mat-option>
-          </mat-select>  
+        <mat-select *ngIf="row.date == currentDate" [(ngModel)]="row.RMcallType" [style.background]="chngeColor(row.RMcallType)">
+          <mat-option [value]="40" style="background-color:rgba(76, 255, 0, 0.17)">Звонок - развитие подтверждён</mat-option>
+          <mat-option [value]="10" style="background-color:rgba(255, 0, 0, 0.29)">Звонок - развитие не подтверждён</mat-option>
+          <mat-option [value]="30">WhatsUp</mat-option>
+          <mat-option [value]="20">Письмо</mat-option>
+        </mat-select>       
+        <mat-select *ngIf="row.date != currentDate" [(ngModel)]="row.RMcallType" [style.background]="chngeColor(row.RMcallType)" disabled>
+          <mat-option [value]="40">Звонок - развитие подтверждён</mat-option>
+          <mat-option [value]="10">Звонок - развитие не подтверждён</mat-option>
+          <mat-option [value]="30">WhatsUp</mat-option>
+          <mat-option [value]="20">Письмо</mat-option>
+        </mat-select>  
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
