--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.sass
@@ -15,8 +15,9 @@
 
 .total-contacts 
     text-align: center
+    margin-left: 10px
     h3
-        font-size: 26px
+        font-size: 20px
         letter-spacing: 0.06em
         text-transform: uppercase
         color: #6C86A5
