--- a/WebUI/ClientApp/src/app/admin/clients/dialogs/create-client-dialog/create-client-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/admin/clients/dialogs/create-client-dialog/create-client-dialog.component.sass
@@ -52,7 +52,8 @@ input, select
     border: 1px solid #E9F3FF
     font-size: 14px
     font-weight: normal
-    color: #9CB2CD
+    color: #9CB2CD !important
+    background-color: #FFFFFF !important
     cursor: pointer
 
 .form-group
