--- a/WebUI/ClientApp/src/app/admin/clients/dialogs/client-phones/client-phones.component.sass
+++ b/WebUI/ClientApp/src/app/admin/clients/dialogs/client-phones/client-phones.component.sass
@@ -41,7 +41,8 @@ input
     border: 1px solid #E9F3FF
     font-size: 14px
     font-weight: normal
-    color: #9CB2CD
+    color: #9CB2CD !important
+    background-color: #FFFFFF !important
     cursor: pointer
 
 
