--- a/WebUI/ClientApp/src/app/admin/clients/dialogs/create-client-dialog/create-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/dialogs/create-client-dialog/create-client-dialog.component.html
@@ -10,7 +10,7 @@
   <div class="form-group">
     <label for="">Номер телефона</label>
     <input placeholder="Телефон" [(ngModel)]="phones[0].phone" [ngModelOptions]="{standalone: true}">
-    <button (click)="openClientPhones()">Еще номера</button>
+    <!--<button (click)="openClientPhones()">Еще номера</button>-->
   </div>      
 
   <div class="form-group">
