Добален архив на рабочие групы и изменены названия, добалена статисктика по каждой групе сегодня, неделя месяц

--- a/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.sass
@@ -18,12 +18,13 @@ td
     padding-left: 15px !important
     padding-right: 5px !important
     border-bottom: none
-
+    color: #1C1C1C !important
 th 
     padding-left: 15px !important
     padding-right: 5px !important
     background-color: #fcfcfc
     border-bottom: none
+    color: #000000 !important
 
 .addEntity
     position: absolute
