--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.sass
@@ -18,9 +18,21 @@
 .mat-card
     padding: 0px
     padding-bottom: 20px
+    padding-top: 20px
+    select
+        width: 130px
+        height: 40px
+        border: 1px solid 
+        border-radius: 99px
+        border: 1px solid #E9F3FF
+        text-transform: uppercase
+        color: #4d73a4
+        font-weight: bold
+        font-size: 20px
+        margin-top: 20px
 
 .card-title
-    padding: 40px 10px
+    padding: 30px 10px
     text-transform: uppercase
     color: #4d73a4
     font-weight: bold
@@ -84,3 +96,5 @@
                 tr
                     &:nth-child(2n)
                         background-color: #f7fcff
+
+  
