--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
@@ -27,8 +27,8 @@
         <mat-select *ngIf="row.date == currentDate" [(ngModel)]="row.MScallType" [style.background]="chngeColor(row.MScallType)">
           <mat-option [value]="40" style="background-color:rgba(76, 255, 0, 0.17)">Звонок - развитие подтверждён</mat-option>
           <mat-option [value]="10" style="background-color:rgba(255, 0, 0, 0.29)">Звонок - развитие не подтверждён</mat-option>
-          <mat-option [value]="30" (click)="selectEl(row)">WhatsUp</mat-option>
-          <mat-option [value]="20" (click)="selectEl(row)">Письмо</mat-option>
+          <mat-option [value]="30">WhatsUp</mat-option>
+          <mat-option [value]="20">Письмо</mat-option>
         </mat-select>  
         <mat-select *ngIf="row.date != currentDate" [(ngModel)]="row.MScallType" disabled [style.background]="chngeColor(row.MScallType)">
           <mat-option [value]="40">Звонок - развитие подтверждён</mat-option>
