Добалены сортировки для архива и сам архив с алгоритмами на страницу "Статистика звонков"

--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-calls-list/workgroups-calls-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-calls-list/workgroups-calls-list.component.html
@@ -1,6 +1,9 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
-    <mat-card-title class="card-title">Звонки</mat-card-title>
+    <mat-card-title class="card-title">Статистика звонков</mat-card-title>
+    <select [(ngModel)]="dateCollection" (ngModelChange)="toFormatDate(dateCollection)">
+      <option *ngFor="let dateCollection of dateCollections">{{dateCollection}}</option>
+    </select>
   </mat-card-header>
   <mat-card-content>
     <table>
