более насыщеный шрифт на странице клиентов у менеджера

--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -6,13 +6,16 @@
 
   <div class="filter clearfix">
     <!--<select [(ngModel)]="selectedGroup" (change)="selectedGroupChange()">
-      <option [value]="-10">Все клиенты</option>
-      <option [value]="0">Неопределен</option>
-      <option [value]="10">Актуальные</option>
-      <option [value]="20">С редкой отгрузкой</option>
-      <option [value]="30">Новые или реанимируемые</option>
-      <option [value]="40">Рестораны</option>
-      <option [value]="50">Другие</option>
+    <option [value]="-10">Все клиенты</option>
+    <option [value]="0">Неопределен</option>
+    <option [value]="10">Актуальные</option>
+    <option [value]="20">С редкой отгрузкой</option>
+    <option [value]="30">Новые или реанимируемые</option>
+    <option [value]="40">Рестораны</option>
+    <option [value]="50">Другие</option>
+  </select>-->
+    <!--<select [(ngModel)]="dateCollection" (ngModelChange)="toFormatDate(dateCollection)">
+      <option *ngFor="let dateCollection of dateCollections">{{dateCollection}}</option>
     </select>-->
     <select [(ngModel)]="selectedGroup" (change)="selectedWorkGroupChange()">
       <option [ngValue]=-10>Все рабочие групы</option>
