--- a/WebUI/ClientApp/src/app/manager-rm/clients/containers/clients/clients.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/containers/clients/clients.component.html
@@ -10,6 +10,7 @@
     (weekPlanUpdated)="updateWeekPlan($event)"
     (weekPlanCreated)="createWeekPlan($event)"
     (weekPlanFactAdded)="addFactToWeekPlan($event)"
+    (weekGet)="getWeek($event)"
     (callsDateCreated)="createCallsDate($event)"
     (callPlanCreated)="createCallPlan($event)"
     (tripPlanCreated)="createTripPlan($event)">
