--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -23,6 +23,7 @@ td
     border-bottom: none
     white-space:nowrap
     overflow:hidden
+    color: #1C1C1C !important
     text-overflow:ellipsis
 
 th 
@@ -30,6 +31,7 @@ th
     padding-right: 5px !important
     background-color: #fcfcfc
     border-bottom: none
+    color: #000000 !important
 
 .addEntity
     position: absolute
