--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
@@ -48,7 +48,7 @@
       <thead>
         <tr>
           <th style="background-color: #F1F8FF" width="50"></th>
-          <th style="background-color: #ECF5FF" (click)="setWeeks(1)">Неделя 1</th>
+          <th style="background-color: #ECF5FF" (click)="setWeeks(1)"><span>Неделя 1</span></th>
           <th style="background-color: #EFF6FF" (click)="setWeeks(2)">Неделя 2</th>
           <th style="background-color: #E2F0FF" (click)="setWeeks(3)">Неделя 3</th>
           <th style="background-color: #DBECFF" (click)="setWeeks(4)">Неделя 4</th>
