--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/edit-client-dialog/edit-client-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/edit-client-dialog/edit-client-dialog.component.sass
@@ -52,8 +52,9 @@ input, select
     border: 1px solid #E9F3FF
     font-size: 14px
     font-weight: normal
-    color: #9CB2CD
     cursor: pointer
+    color: #9CB2CD !important
+    background-color: #FFFFFF !important
 
 .form-group
     margin-bottom: 20px
