--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/client-phones/client-phones.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/client-phones/client-phones.component.sass
@@ -41,8 +41,9 @@ input
     border: 1px solid #E9F3FF
     font-size: 14px
     font-weight: normal
-    color: #9CB2CD
     cursor: pointer
+    color: #9CB2CD !important
+    background-color: #FFFFFF !important
 
 
 .form-group
