--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/create-client-dialog/create-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/create-client-dialog/create-client-dialog.component.html
@@ -1,4 +1,4 @@
-<h3 class="dialog-title" mat-dialog-title>Создание клиента</h3>
+<h3 class="dialog-title" mat-dialog-title>Создание карточку клиента</h3>
 <button class="close" (click)="close()"><i class="fas fa-times fa-2x"></i></button>
 
 
@@ -9,7 +9,7 @@
   </div>
   <div class="form-group">
     <label for="">Номер телефона</label>
-    <input placeholder="Телефон" [(ngModel)]="phones[0].phone" [ngModelOptions]="{standalone: true}">
+    <input placeholder="Телефон" [(ngModel)]="phones[0].phone" [ngModelOptions]="{standalone: true}" >
     <button (click)="openClientPhones()">Еще номера</button>
   </div>      
 
@@ -80,5 +80,4 @@
     <button color="primary" mat-raised-button (click)="save()">Сохранить</button>
     <button mat-raised-button (click)="close()">Закрыть</button>
   </div>
-  
   
