--- a/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups-plans/workgroup-plans.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups-plans/workgroup-plans.component.html
@@ -1,1 +1,4 @@
-<app-workgroup-plans-list [workgroupPlans]="workgroupPlans$ | async"></app-workgroup-plans-list>
+<app-workgroup-plans-list
+                          [workgroupPlans]="workgroupPlans$ | async"
+                          [weekPlans]="weekPlans$ | async"
+                          ></app-workgroup-plans-list>
